--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
+.App {
+  text-align: center;
+}
+* {
+  direction: rtl;
+}
+@font-face {
+  font-family: "kolli";
+  src: url("./components/stuffs/IRAN\ Sans\ Regular.ttf");
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: kolli;
+  font-weight: 400;
+  font-style: normal;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* *******************navbar********************** */
+.navbarFont {
+  background-color: #F7F7F7;
+  color: #58595B !important;
+  font-size: 20px;
+  font-weight: 600;
+  /* margin-left: 30px; */
 }
+#logo{
+  width: 110px;
+  height: 40px;
+  margin-right: 70px;
+  margin-left: 50px;
+}
+/* *******************end of navbar********************** */
