--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,34 @@ body {
   margin-left: 50px;
 }
 /* *******************end of navbar********************** */
+
+/* *******************card********************** */
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 20pt;
+}
+
+.flex > div {
+  margin: 0 1rem 2rem 1rem;
+  text-align: center;
+}
+.card{
+  cursor: pointer;
+  padding: 10px;
+  transition: all .3s ease-in-out; 
+}
+.card:hover{
+  transform: scale(1.1);
+}
+#delete{
+  background-color: red;
+  color: #F7F7F7;
+  width: fit-content;
+  height: fit-content;
+  border-radius: 3px;
+  border: none;
+}
+/* *******************end of card********************** */
