--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ body {
   text-align: center;
 }
 .card {
-  padding: 10px;
+  /* padding: 10px; */
   transition: all 0.3s ease-in-out;
 }
 .card:hover {
